--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title></title>
 
 		<!--put your external stylesheet links here-->
+		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 		<link rel="stylesheet" href="lib/leaflet/leaflet.css">
 		<link rel="stylesheet" href="css/style.css">
 		<!--[if IE<9]>
@@ -14,15 +15,15 @@
 	</head>
 
 	<body>
-		hi
+		<div id= "map"></div>
 		<!--put your initial page content here-->
 			
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
 
 		<!--put your external script links here-->
-		<script type="text/javascript" src="lib/leaflet.js"></script>
-		<script type="text/javascript" src="lib/jquery-2.2.0.js"></script>
+		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+		<script type="text/javascript" src="lib/jquery-2.2.0.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/tutorials.js"></script>
 	</body>
