--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 	<body>
 		<div id= "map"></div>
+		<div id="panel"></div>
 		<!--put your initial page content here-->
 			
 		<!--you can also use this space for internal scripts or stylesheets;
