--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title></title>
+		<title>World Gas Prices Between 2010-2015</title>
 
 		<!--put your external stylesheet links here-->
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
@@ -16,6 +16,12 @@
 	</head>
 
 	<body>
+		<div id="title">
+			<h1>Where's Gas the Priciest?</h1>
+		</div>	
+		<div id="subtitle">
+			<h2> Gas Prices Between 2010 and 2015 </h2>
+		
 		<div id= "map"></div>
 		<div id="panel"></div>
 		<!--put your initial page content here-->
